[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Room1/drawer.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Room1/kommode.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Room1/kommode_open.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 163.538, 255.271 )

[node name="Drawer" type="Node2D"]
script = ExtResource( 1 )

[node name="DrawerOpen" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="DrawerClosed" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="DrawerTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrawerTrigger"]
position = Vector2( -62, -26 )
shape = SubResource( 1 )
[connection signal="input_event" from="DrawerTrigger" to="." method="on_click"]
